# dreamy-dragons

./: README.md  pyproject.toml  requirements.txt
backend/: gameserver.py  main.py  player.py  room.py  schemas.py
compose/: dev.yml  local.yml
docker/: Dockerfile.backend.dev
frontend/: index.html  join.html  lobby.html  main.js  questioncard.html  styles.css  styles2.css  textcard.html
frontend/modules/: game.js  join-room-view.js  no-connection-view.js  player.js  room-view.js  text-card-view.js
